--- a/ui/reader/reader.ui
+++ b/ui/reader/reader.ui
@@ -49,8 +49,8 @@
       <rect>
        <x>0</x>
        <y>0</y>
-       <width>98</width>
-       <height>28</height>
+       <width>681</width>
+       <height>429</height>
       </rect>
      </property>
      <attribute name="label">
@@ -66,7 +66,7 @@
        </rect>
       </property>
       <property name="currentIndex">
-       <number>0</number>
+       <number>1</number>
       </property>
       <widget class="QWidget" name="order_statuses_tab">
        <attribute name="title">
@@ -77,6 +77,120 @@
        <attribute name="title">
         <string>create order</string>
        </attribute>
+       <widget class="QTableWidget" name="books_table">
+        <property name="geometry">
+         <rect>
+          <x>10</x>
+          <y>10</y>
+          <width>661</width>
+          <height>251</height>
+         </rect>
+        </property>
+        <property name="sortingEnabled">
+         <bool>true</bool>
+        </property>
+        <property name="rowCount">
+         <number>0</number>
+        </property>
+        <attribute name="horizontalHeaderDefaultSectionSize">
+         <number>160</number>
+        </attribute>
+        <attribute name="horizontalHeaderShowSortIndicator" stdset="0">
+         <bool>true</bool>
+        </attribute>
+        <attribute name="horizontalHeaderStretchLastSection">
+         <bool>false</bool>
+        </attribute>
+        <column>
+         <property name="text">
+          <string>add to order</string>
+         </property>
+        </column>
+        <column>
+         <property name="text">
+          <string>book name</string>
+         </property>
+        </column>
+        <column>
+         <property name="text">
+          <string>author</string>
+         </property>
+        </column>
+        <column>
+         <property name="text">
+          <string>genres</string>
+         </property>
+        </column>
+       </widget>
+       <widget class="QListWidget" name="books_in_order_list">
+        <property name="geometry">
+         <rect>
+          <x>10</x>
+          <y>290</y>
+          <width>331</width>
+          <height>101</height>
+         </rect>
+        </property>
+       </widget>
+       <widget class="QPushButton" name="create_order_button">
+        <property name="geometry">
+         <rect>
+          <x>450</x>
+          <y>330</y>
+          <width>131</width>
+          <height>51</height>
+         </rect>
+        </property>
+        <property name="text">
+         <string>create order</string>
+        </property>
+       </widget>
+       <widget class="QDateEdit" name="return_date_edit">
+        <property name="geometry">
+         <rect>
+          <x>510</x>
+          <y>290</y>
+          <width>110</width>
+          <height>24</height>
+         </rect>
+        </property>
+        <property name="calendarPopup">
+         <bool>true</bool>
+        </property>
+        <property name="date">
+         <date>
+          <year>2022</year>
+          <month>12</month>
+          <day>1</day>
+         </date>
+        </property>
+       </widget>
+       <widget class="QLabel" name="label_5">
+        <property name="geometry">
+         <rect>
+          <x>430</x>
+          <y>290</y>
+          <width>81</width>
+          <height>21</height>
+         </rect>
+        </property>
+        <property name="text">
+         <string>return date:</string>
+        </property>
+       </widget>
+       <widget class="QLabel" name="label_6">
+        <property name="geometry">
+         <rect>
+          <x>10</x>
+          <y>270</y>
+          <width>71</width>
+          <height>16</height>
+         </rect>
+        </property>
+        <property name="text">
+         <string>your order:</string>
+        </property>
+       </widget>
       </widget>
      </widget>
     </widget>
@@ -123,7 +237,7 @@
        <rect>
         <x>90</x>
         <y>10</y>
-        <width>200</width>
+        <width>261</width>
         <height>20</height>
        </rect>
       </property>
@@ -162,7 +276,7 @@
        <rect>
         <x>90</x>
         <y>40</y>
-        <width>200</width>
+        <width>261</width>
         <height>20</height>
        </rect>
       </property>
@@ -178,7 +292,7 @@
        <rect>
         <x>90</x>
         <y>70</y>
-        <width>200</width>
+        <width>261</width>
         <height>20</height>
        </rect>
       </property>
@@ -191,7 +305,7 @@
        <rect>
         <x>90</x>
         <y>100</y>
-        <width>200</width>
+        <width>261</width>
         <height>20</height>
        </rect>
       </property>
